After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 654558 - Can not stop file search. Stop button run away from mouse pointer
Can not stop file search. Stop button run away from mouse pointer
Status: VERIFIED FIXED
Product: nautilus
Classification: Core
Component: File Search Interface
3.1.x
Other Linux
: Normal normal
: 3.2
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 658572 (view as bug list)
Depends on:
Blocks: 563163
 
 
Reported: 2011-07-13 14:43 UTC by Pedro Villavicencio
Modified: 2011-10-05 09:01 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2


Attachments
Check if the floating-bar is interactive before moving it. (2.12 KB, patch)
2011-07-16 05:46 UTC, Luke Symes
committed Details | Review

Description Pedro Villavicencio 2011-07-13 14:43:47 UTC
this report has been filed here:

https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/809790

"When searching for files in Nautilus and the search takes some time, a small box with a stop button is displayed at the bottom of the file browser. From the look of that button, it is expected that clicking on it will stop the current search. But actually the user can not click on it because the button runs away from the pointer. (Video attached)

TEST CASE:
1. Launch a file browser
2. Go to a directory with lot of files (e.g Home)
3. Press CTRL+F to open the search box
4. Search for something rather generic e.g 'pdf'

Result:
The search starts running and a small box is displayed, but the user can not stop it."

video:

https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/809790/+attachment/2205272/+files/nautilus_search.ogv
Comment 1 Luke Symes 2011-07-16 01:26:27 UTC
This is due to this commit:
http://git.gnome.org/browse/nautilus/commit/?id=e239f2a150f34b7f7b4730772fae5a372a7924d1

The change introduced was "floating-bar: copy code from Epiphany to hide the floating bar on hover". Obviously, this shouldn't happen when interaction with the floating bar is required.
Comment 2 Luke Symes 2011-07-16 02:10:14 UTC
Also, this commit:
http://git.gnome.org/browse/nautilus/commit/?id=a28a89ab8112a5207d5413e5f767f191d1d13339

This one ported floating-bar to GtkOverlay, and kept the "hide on hover" behaviour.
Comment 3 Luke Symes 2011-07-16 05:46:24 UTC
Created attachment 192077 [details] [review]
Check if the floating-bar is interactive before moving it.
Comment 4 Cosimo Cecchi 2011-09-07 16:35:37 UTC
Thanks for the patch. I committed a slightly tweaked patch to git master.
Comment 5 Matthew Paul Thomas (mpt) 2011-09-08 14:44:59 UTC
*** Bug 658572 has been marked as a duplicate of this bug. ***
Comment 6 André Klapper 2011-10-05 09:01:48 UTC
Verified in Nautilus 3.2.0 on Ubuntu 11.10beta