Don't hide the floating-bar on hover if it is interactive

If there are actions set on the floating bar, avoid escaping the
pointer.

https://bugzilla.gnome.org/show_bug.cgi?id=654558